--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-MYSQL_DSN="root:root@tcp(127.0.0.1:3306)/goblog?charset=utf8mb4&parseTime=True&loc=Local"
+DB_DSN="root:root@tcp(127.0.0.1:3306)/goblog?charset=utf8mb4&parseTime=True&loc=Local"
 
 GIN_MODE="debug"
 
