--- a/env.example
+++ b/env.example
@@ -1,7 +1,10 @@
-DB_DSN="root:root@tcp(127.0.0.1:3306)/goblog?charset=utf8mb4&parseTime=True&loc=Local"
+MYSQL_HOST="127.0.0.1"
+MYSQL_PORT="3306"
+MYSQL_NAME="goblog"
+MYSQL_USER="root"
+MYSQL_PASSWORD="root"
 
 GIN_MODE="debug"
-
 HTTP_PORT=":3030"
 
 JWT_KEY="JweRaYTHIK"
